--- a/.vuepress/manifest.json
+++ b/.vuepress/manifest.json
@@ -8,8 +8,10 @@
   "debugging.md",
   "debugging-with-gdb.md",
   "function-pointers.md",
+  "initialise-array.md",
   "initialise-multidimensional-array.md",
   "linking.md",
+  "make.md",
   "malloc.md",
   "manpages.md",
   "mutable-strings.md",
