Notes on multiple indirection & pointer arithmetic.

--- a/.vuepress/manifest.json
+++ b/.vuepress/manifest.json
@@ -14,6 +14,7 @@
   "make.md",
   "malloc.md",
   "manpages.md",
+  "multiple-indirection-arithmetic.md",
   "mutable-strings.md",
   "null-pointer.md",
   "open-read-file.md",
@@ -22,6 +23,7 @@
   "pass-array-of-strings-to-function.md",
   "pointer-abuse.md",
   "pointer-arithmetic.md",
+  "pointer-arithmetic-multiple-indirection.md",
   "pointers-to-structs.md",
   "preprocessing.md",
   "programme-design.md",
